log
Sun Mar 13 16:37:48 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b7badc9
Sun Mar 13 16:42:23 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:42:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   *suma = sumaN(*(a+m), n);
                 ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
exercises.c:40:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i;
       ^
cc1: all warnings being treated as errors
Compilation failed
ef58d0f
Sun Mar 13 19:01:22 UTC 2022: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   *suma = sumaN(*(a+m), n);
                 ^
exercises.c:21:5: note: expected ‘int *’ but argument is of type ‘int’
 int sumaN(int a[], int N) {
     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
fbc320f
Sun Mar 13 19:02:47 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4f2e414
Sun Mar 13 19:05:15 UTC 2022: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:59:8: error: ‘i’ undeclared (first use in this function)
   for (i = 0; i<30; i++)
        ^
exercises.c:59:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:61:17: error: ‘a’ undeclared (first use in this function)
     scanf("%c", a[i]);
                 ^
exercises.c:69:15: error: ‘$edad’ undeclared (first use in this function); did you mean ‘edad’?
   scanf("%i", $edad);
               ^~~~~
               edad
Compilation failed
99a2482
Sun Mar 13 19:05:32 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:59:8: error: ‘i’ undeclared (first use in this function)
   for (i = 0; i<30; i++)
        ^
exercises.c:59:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:61:17: error: ‘a’ undeclared (first use in this function)
     scanf("%c", a[i]);
                 ^
Compilation failed
c8d5355
Sun Mar 13 19:05:52 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:63:17: error: ‘a’ undeclared (first use in this function)
     scanf("%c", a[i]);
                 ^
exercises.c:63:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
de62d23
Sun Mar 13 19:06:20 UTC 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:63:13: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
     scanf("%c", nombre[i]);
            ~^   ~~~~~~~~~
exercises.c:68:13: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
     scanf("%c", rut[i]);
            ~^   ~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cb4991c
Sun Mar 13 20:33:29 UTC 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearPersona’:
exercises.c:63:13: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
     scanf("%c", nombre[i]);
            ~^   ~~~~~~~~~
exercises.c:68:13: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
     scanf("%c", rut[i]);
            ~^   ~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6bedd23
Sun Mar 13 20:35:30 UTC 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: variable ‘total’ set but not used [-Werror=unused-but-set-variable]
   int total;
       ^~~~~
exercises.c: In function ‘crearPersona’:
exercises.c:63:13: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
     scanf("%c", nombre[i]);
            ~^   ~~~~~~~~~
exercises.c:68:13: error: format ‘%c’ expects argument of type ‘char *’, but argument 2 has type ‘int’ [-Werror=format=]
     scanf("%c", rut[i]);
            ~^   ~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d1dd2c9
Sun Mar 13 20:35:46 UTC 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:7: error: variable ‘total’ set but not used [-Werror=unused-but-set-variable]
   int total;
       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
78d90b2
Sun Mar 13 20:37:42 UTC 2022: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:49:5: error: expected ‘;’ before ‘}’ token
     }
     ^
Compilation failed
1173f19
Sun Mar 13 20:40:36 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
efe9828
Sun Mar 13 20:42:56 UTC 2022: 
 exercises.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:42:7: error: unused variable ‘resto’ [-Werror=unused-variable]
   int resto;
       ^~~~~
exercises.c:41:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i;
       ^
exercises.c:40:7: error: unused variable ‘total’ [-Werror=unused-variable]
   int total;
       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
8c3e259
Sun Mar 13 20:43:08 UTC 2022: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|6
total_score: 10/70
3c515c8
Sun Mar 13 20:43:35 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:8: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   suma = sumaN((a+(n-m)), n);
        ^
cc1: all warnings being treated as errors
Compilation failed
cef8526
Sun Mar 13 20:44:01 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
bcff6ac
Sun Mar 13 20:44:24 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b9b10f9
Sun Mar 13 20:44:47 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
444cb2f
